Error Mitigation/MagiCoder/Data/javax_naming_ldap/javax_naming_ldapOutputResult.txt
Sample: BasicControl_2
----------------------------------------------------------------
stdout:
[116, 101, 115, 116]

================================================================

Sample: BasicControl_3
----------------------------------------------------------------
stdout:
Control ID: 1.2.3.4

================================================================

Sample: LdapName_2
----------------------------------------------------------------
stdout:
dc=com
dc=example
ou=People
cn=John Doe

================================================================

Sample: LdapName_3
----------------------------------------------------------------
stdout:
Number of components in the LDAP name: 4

================================================================

Sample: LdapName_4
----------------------------------------------------------------
output:
./Data/javax_naming_ldap/javaFiles/LdapName_4.java:9: error: cannot find symbol
            LdapName ldapName = new LdapName("cn=John Doe,ou=People,dc=example,dc=com", LdapName.RDN_CASE_IGNORE);
                                                                                                ^
  symbol:   variable RDN_CASE_IGNORE
  location: class LdapName
1 error


================================================================

Sample: Rdn_3
----------------------------------------------------------------
stdout:
Type: dc

================================================================

Sample: Rdn_5
----------------------------------------------------------------
output:
./Data/javax_naming_ldap/javaFiles/Rdn_5.java:8: error: cannot find symbol
            LdapName ldapName = new LdapName("cn=John Doe,ou=People,dc=example,dc=com", LdapName.RDN_ORDER);
                                                                                                ^
  symbol:   variable RDN_ORDER
  location: class LdapName
1 error


================================================================

